force-app/main/default/objects/Form_Connection__c/Form_Connection__c.object-meta.xml
<CustomObject>
    <label>Clarity Form Connection</label>
    <nameField>
        <label>Clarity Form Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clarity Form Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>