force-app/main/default/objects/Form_Connection__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <label>Clarity Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Form Connections</relationshipLabel>
    <relationshipName>Form_Connections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>