force-app/main/default/objects/Form_Connection__c/fields/Form_Version__c.field-meta.xml
<CustomField>
    <fullName>Form_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clarity Form Version</label>
    <referenceTo>Form_Version__c</referenceTo>
    <relationshipLabel>Clarity Form Connections</relationshipLabel>
    <relationshipName>Clarity_Form_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>