force-app/main/default/objects/Form_Connection__c/fields/Result_Holder__c.field-meta.xml
<CustomField>
    <fullName>Result_Holder__c</fullName>
    <label>Result Holder</label>
    <length>100</length>
    <type>Text</type>
</CustomField>